Fixes #2; will move slogan when on mobile too

--- a/src/styles/BothNavbars.scss
+++ b/src/styles/BothNavbars.scss
@@ -305,6 +305,10 @@
       color: $primary;
     }
   }
+
+  #nav-menu {
+    background-color: black;
+  }
 }
 .navbar-end.is-hidden-desktop {
   display: flex;
